[metadata]
name = pyexplorers
version = 0.0.2
author = Sau1707
author_email = leonardo.saurwein@gmail.com
description = Connect multiple crypto explorers API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pyexplorers
python_requires = >=3.6

